--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"devDependencies": {
 		"@biomejs/biome": "2.3.12",
 		"@types/bun": "latest",
+		"@types/js-yaml": "^4.0.9",
 		"@types/node": "^25.0.10"
 	},
 	"peerDependencies": {
@@ -21,6 +22,7 @@
 		"@tanstack/ai-ollama": "^0.3.0",
 		"@tanstack/ai-openai": "^0.2.1",
 		"chalk": "^5.6.2",
-		"commander": "^14.0.2"
+		"commander": "^14.0.2",
+		"js-yaml": "^4.1.1"
 	}
 }
