--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
 		"@biomejs/biome": "2.3.12",
 		"@types/bun": "latest",
 		"@types/js-yaml": "^4.0.9",
-		"@types/node": "^25.0.10"
+		"@types/node": "^25.0.10",
+		"@types/react": "^19.2.9",
+		"@types/shell-quote": "^1.7.5"
 	},
 	"peerDependencies": {
 		"typescript": "^5"
 	},
 	"dependencies": {
+		"@opentui/core": "^0.1.75",
+		"@opentui/react": "^0.1.75",
 		"@tanstack/ai": "^0.2.2",
 		"@tanstack/ai-anthropic": "^0.2.0",
 		"@tanstack/ai-gemini": "^0.3.2",
@@ -23,6 +27,8 @@
 		"@tanstack/ai-openai": "^0.2.1",
 		"chalk": "^5.6.2",
 		"commander": "^14.0.2",
-		"js-yaml": "^4.1.1"
+		"js-yaml": "^4.1.1",
+		"react": "^19.2.4",
+		"shell-quote": "^1.8.3"
 	}
 }
