--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@tanstack/ai-openai": "^0.2.1",
 		"chalk": "^5.6.2",
 		"commander": "^14.0.2",
+		"dotenv": "^17.2.3",
 		"js-yaml": "^4.1.1",
 		"react": "^19.2.4",
 		"shell-quote": "^1.8.3"
