better config and makefile

--- a/.env.template
+++ b/.env.template
@@ -2,6 +2,8 @@ OPENAI_API_KEY=
 ANTHROPIC_API_KEY=
 GEMINI_API_KEY=
 OLLAMA_BASE_URL=
+BRASH_DEFAULT_PROVIDER=
+BRASH_DEFAULT_MODEL=
 BRASH_DEBUG=
 BRASH_SHELL=
 SHELL=
