--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
 	"private": true,
 	"devDependencies": {
 		"@biomejs/biome": "2.3.12",
+		"@testing-library/react": "^16.3.2",
 		"@types/bun": "latest",
 		"@types/js-yaml": "^4.0.9",
+		"@types/jsdom": "^27.0.0",
 		"@types/node": "^25.0.10",
 		"@types/react": "^19.2.9",
-		"@types/shell-quote": "^1.7.5"
+		"@types/shell-quote": "^1.7.5",
+		"happy-dom": "^20.5.0",
+		"jsdom": "^28.0.0"
 	},
 	"peerDependencies": {
 		"typescript": "^5"
