--- a/.env.template
+++ b/.env.template
@@ -2,9 +2,9 @@ OPENAI_API_KEY=
 ANTHROPIC_API_KEY=
 GEMINI_API_KEY=
 OLLAMA_BASE_URL=
-BRASH_DEFAULT_PROVIDER=
-BRASH_DEFAULT_MODEL=
-BRASH_DEBUG=
-BRASH_SHELL=
+SCUTE_DEFAULT_PROVIDER=
+SCUTE_DEFAULT_MODEL=
+SCUTE_DEBUG=
+SCUTE_SHELL=
 SHELL=
 READLINE_LINE=
