--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
 	"scripts": {
 		"build": "bun build ./src/index.ts --compile --outfile scute",
 		"test": "bun test tests --pattern \\\"\\.test\\.ts$\\\"",
-		"evals": "bun test evals --pattern \\\"\\.eval\\.test\\.ts$\\\"",
-		"test:evals": "bun test evals --pattern \\\"\\.eval\\.test\\.ts$\\\""
+		"evals": "bun test evals --pattern \\\"\\.eval\\.test\\.ts$\\\""
 	},
 	"private": true,
 	"devDependencies": {
