--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@napisani/scute",
+	"name": "napisani/scute",
 	"version": "0.0.1",
 	"description": "AI-powered shell assistant",
 	"license": "MIT",
