brew script fix

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,9 @@ on:
     tags:
       - "v*"
 
+permissions:
+  contents: write
+
 jobs:
   build-binaries:
     name: Build ${{ matrix.os }} binary
@@ -61,6 +64,7 @@ jobs:
     name: Create GitHub Release
     needs: build-binaries
     runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/v')
 
     steps:
       - name: Download artifacts
@@ -88,3 +92,5 @@ jobs:
           artifactContentType: application/octet-stream
           draft: false
           prerelease: ${{ contains(github.ref_name, '-') }}
+          allowUpdates: true
+          generateReleaseNotes: true
